<resources>
    <string name="app_name">AutoShop</string>
    <string name="autoshop">AutoShop</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New User? Register here</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="msg_connection_error">Failed to connect to server!</string>
    <string name="msg_something_wrong">Something is wrong!</string>
    <string name="register">Register</string>
    <string name="booking_service">Booking Service</string>
    <string name="sos">SOS</string>
    <string name="on_going_service">On Going Service</string>
    <string name="booking">Booking</string>
    <string name="ongoing">OnGoing</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="tab_text_1">Customer</string>
    <string name="tab_text_2">Autoshop</string>
    <string name="notes">Notes</string>
    <string name="reissue">Reissue</string>
    <string name="confirm">Confirm</string>
    <string name="autoshop_name">AutoShop Name</string>
    <string name="autoshop_username">Autoshop Username</string>
    <string name="register_autoshop">Register Autoshop</string>
    <string name="autoshop_registration">Autoshop Registration</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="customer">Customer</string>
    <string name="login_as">Login as: </string>
    <string name="proceed">Proceed</string>
    <string name="choose_service">Choose service:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_autoshop">Choose Autoshop</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="book">Book</string>
    <string name="pick_booking_date">Pick booking date</string>
    <string name="choose_movement">Choose movement</string>
    <string name="sos_choose_autoshop">SOS - Choose Autoshop</string>
    <string name="on_going_detail">On Going Detail</string>
    <string name="choose_vehicle">Choose Vehicle</string>
    <string name="choose_service1">Choose Service</string>
    <string name="self_pickup">Self-pickup</string>
    <string name="delivery">Delivery</string>
    <string name="issue">Issue</string>
    <string name="contact">Contact</string>
    <string name="service_pricing">Service Pricing</string>
    <string name="total">Total</string>
    <string name="order_history">Order History</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="personal_info">Personal Info</string>
    <string name="vehicles">Vehicles</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="autoshop_info">AutoShop Info</string>
    <string name="name">Name</string>
    <string name="picker_contact">Picker Contact</string>
    <string name="admin_contact">Admin Contact</string>
    <string name="address">Address</string>
    <string name="latlong">LatLong</string>
    <string name="space_amount">Space Amount</string>
    <string name="bank">Bank</string>
    <string name="acc_number">Acc Number</string>
    <string name="services">Services</string>
    <string name="booked">Booked</string>
    <string name="working_space">Working Space</string>
    <string name="service">Service</string>
    <string name="working_space_detail">Working Space Detail</string>
    <string name="update">Update</string>
    <string name="finish">Finish</string>
    <string name="complaints">Complaints</string>
    <string name="mark_your_location">Mark your location</string>
    <string name="pick_autoshop">Pick AutoShop</string>
    <string name="scan_qr">Scan QR</string>
    <string name="progress">Progress</string>
    <string name="search_autoshop">Search AutoShop</string>
    <string name="add_service">Add Service</string>
    <string name="price">Price</string>
    <string name="booked_service">Booked Service</string>
    <string name="add">Add</string>
    <string name="add_transaction_cost">Add Transaction Cost</string>
    <string name="payment">Payment</string>
    <string name="transaction_cost">Transaction Cost</string>
    <string name="service_history">Service History</string>
    <string name="open_hours">Open Hours</string>
    <string name="close_hours">Close Hours</string>
    <string name="_24_hours_working_hours">24 Hours - Working Hours</string>
    <string name="available_services">Available Services</string>
    <string name="available_vehicle_type">Available Vehicle Type</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="brand_model">Brand-Model</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_note">Add Note</string>
    <string name="note">Note</string>
    <string name="location_in_maps">Location in Maps</string>
    <string name="no_note">No Note</string>
    <string name="change_location">Change Location</string>
    <string name="hold_and_drag_the_marker">Hold and drag the marker</string>
    <string name="save_location">Save Location</string>
    <string name="self_delivery">Self Delivery</string>
    <string name="autoshop_pickup">Autoshop Pickup</string>
    <string name="choose_movement1">Choose Movement</string>
    <string name="set_movement">Set Movement</string>
    <string name="year">Year</string>
    <string name="amount_parse">Rp. %1$s</string>
    <string name="production_year">Production Year</string>
    <string name="rp_0">Rp 0</string>
    <string name="detail">Detail</string>
    <string name="invoice">Invoice</string>
    <string name="_0">0%</string>
    <string name="active_ws">Active Working Space</string>
    <string name="legend">Legend</string>
    <string name="sos_booking">SOS Booking</string>
    <string name="regular_booking_autoshop_pickup">Regular Booking - Autoshop Pickup</string>
    <string name="regular_booking_self_delivery">Regular Booking - Self Delivery</string>
    <string name="service_act">Service Act</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="overnight_fee">Overnight Fee</string>
    <string name="choose_pickup_movement">Choose Pickup Movement</string>
    <string name="autoshop_delivery">Autoshop Delivery</string>
    <string name="payment_proof">Payment Proof</string>
    <string name="browse">Browse</string>
    <string name="upload">Upload</string>
    <string name="pick_up_time">Pick Up Time</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="year_month_date">Year/Month/Date</string>
    <string name="hh_mm_ss">hh:mm:ss</string>
    <string name="yy_mm_dd">yyyy/MM/dd</string>
    <string name="select_pickup_option">Select Pickup Option</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="search_favorite">Search Favorite</string>
    <string name="set_location">Set Location</string>
    <string name="finish_order">Finish Order</string>
    <string name="sos_order">SOS Order</string>
    <string name="active_workspace">Active Workspace</string>
    <string name="reissued_order">Reissued Order</string>
    <string name="autoshop_email">autoshopcorporation@gmail.com</string>
    <string name="autoshop_password">kentanggoreng</string>
    <string name="holiday_notification">Holiday Notification</string>
</resources>
