<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_booking"
        android:icon="@drawable/ic_nav_booking"
        android:title="@string/booking" />

    <item
        android:id="@+id/navigation_sos"
        android:icon="@drawable/ic_nav_sos"
        android:title="@string/sos" />

    <item
        android:id="@+id/navigation_ongoing"
        android:icon="@drawable/ic_nav_ongoing"
        android:title="@string/ongoing" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_cprof"
        android:title="@string/profile" />

</menu>
