<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_black_gradient">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/ic_close"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available_vehicle_type"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:textColor="@color/colorWhite"
            android:text="@string/vehicle_name" />

        <EditText
            android:id="@+id/txt_vehicle_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:textColor="@color/colorWhite"
            android:text="@string/brand_model" />

        <Spinner
            android:id="@+id/sp_brand_model"
            android:layout_width="0dp"
            android:layout_height="40dp"
            style="@style/mySpinnerItemStyle"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/production_year"
            android:textColor="@color/colorWhite" />

        <EditText
            android:id="@+id/txt_year"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:inputType="number"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_vehicle"
        style="@style/Button.Neutral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_vehicle" />
</LinearLayout>