<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_black_gradient"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/ic_close" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/payment"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:text="@string/bank"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_bank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="BCA" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_an"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/ic_copy"
            android:text="@string/acc_number"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_account_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="0321244824" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/ic_copy"
            android:text="@string/contact"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="021 34445 2354" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_t"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/ic_copy"
            android:text="@string/total"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="Rp. 300.000" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/payment_proof"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_browse"
            style="@style/Button.Neutral"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/browse" />

        <ImageView
            android:id="@+id/img_proof"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_upload"
            style="@style/Button.Neutral"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:text="@string/upload"
            android:gravity="center"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>